# openMPI_Integral_test

./: README.md
MPI_Integral3/: CMakeLists.txt  main.cpp
MPI_Integral_wa1/: CMakeLists.txt  main.cpp
MPI_Integral_wa3/: CMakeLists.txt  main.cpp
MPI_newIntegral/: CMakeLists.txt  a.out  main.cpp
